@@ -146,6 +146,7 @@ double speed_mpf_init_clear __GMP_PROTO ((struct speed_params *s));
 
 double speed_mpn_add_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_addlsh1_n __GMP_PROTO ((struct speed_params *s));
+double speed_mpn_addlsh2_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_add_n_sub_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_and_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_andn_n __GMP_PROTO ((struct speed_params *s));
@@ -236,6 +237,7 @@ double speed_mpn_preinv_divrem_1f __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_preinv_mod_1 __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_redc_1 __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_rsblsh1_n __GMP_PROTO ((struct speed_params *s));
+double speed_mpn_rsblsh2_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_rsh1add_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_rsh1sub_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_rshift __GMP_PROTO ((struct speed_params *s));
@@ -253,6 +255,7 @@ double speed_mpn_sqrtrem __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_rootrem __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_sub_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_sublsh1_n __GMP_PROTO ((struct speed_params *s));
+double speed_mpn_sublsh2_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_submul_1 __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_toom2_sqr __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_toom3_sqr __GMP_PROTO ((struct speed_params *s));
